# documentation

./: .gitignore  Makefile  README.md  bw-dev  create_versions.sh  crowdin.yml  generate.py  i18n.py  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  run.sh  settings.py  tasks.py
.github/: ACTION_ISSUE_TEMPLATE.md
.github/workflows/: black.yml  deploy.yml  lint-frontend.yaml  lint-global.yaml  pylint.yml  receive_docs_issues.yml  ruff.yml
content/: CONTRIBUTING.md  INSTALLATION.md  index.md  install-prod.md  instances.md
content/codebase/: _meta.yml  activitypub.md  permissions.md
content/contributing/: _meta.yml  codereview.md  contributing.md  debug_toolbar.md  documentation.md  install-dev.md  style_guide.md  translation.md
content/managing_bookwyrm/: _meta.yml  moderation.md  (+2 more)
plugins/: add_header_links.py
site/: 404.html  activitypub.html  adding-books.html  admin-settings.html  cli.html  codereview.html  contributing.html  debug_toolbar.html  documentation.html  environment.html  external-storage.html  federation.html  groups.html  index.html  install-dev.html  install-prod-dockerless.html  install-prod.html  lists.html  main-menu.html  management-commands.html  moderation.html  monitoring-queue.html  optional_features.html  ouindex.html  permissions.html  posting-statuses.html  privacy-controls.html  reverse-proxy.html  rss-feeds.html  settings.html  shelves.html  style_guide.html  system.html  translation.html  updating-dockerless.html  updating.html  user-migration.html  users.html
templates/: index.html  layout.html  page.html
(+1527 files in other folders)
