[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "BookWyrm-documentation"
version = "0.8.5"
readme = "README.md"

dependencies = [
    "Jinja2>=3.1.6",
    "Markdown>=3.9.0",
    "pagefind[extended]>=1.5.2",
    "PyYAML>=6.0.2",
    "pygments>=2.20.0",
    "ruff>=0.15.15",
]

[console_scripts]
generate = "generate:main"

[tool.ruff]
exclude = ["site", "**/__init__.py"]

line-length = 88

target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes (critical errors only)
]

ignore = [
    "E722", # bare except
    "E731", # lambda assignment
    "F405", # `env` may be undefined, or defined from star imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
